Added sources: cal.c echo.c stdlib.h Fixed bug in ld: incorrect hash function. Fixed vprintf: invalid signed comparison (bug in compiler). Cc and pcc: added base address option "-a". Disasm: base address option renamed to "-a". Several changes in pcc: incompatible assembler output. Runtime library: bugs in long %= and /= fixed.

--- a/cross-pcc/ld/Makefile
+++ b/cross-pcc/ld/Makefile
@@ -1,5 +1,5 @@
 CC		= gcc -g -Wall
-CFLAGS		=
+CFLAGS		= -O
 DESTDIR		= /usr/local
 PROG		= pdp11-size pdp11-strip pdp11-disasm pdp11-reloc \
 		  pdp11-nm pdp11-ld pdp11-ar
