Ld: pass 2 bug: reading two FILEs from the same descriptor is insecure. Commands /bin/ls and /etc/init work fine. Libc: added malloc() and readdir().

--- a/src/etc/Makefile
+++ b/src/etc/Makefile
@@ -18,8 +18,8 @@ SIZE		= pdp11-size -o
 CFLAGS		= -O -I../libc
 LDFLAGS		= -a$(TOPSYS)
 
-PROGS		= glob init mkfs mknod clri
-# TODO:
+PROGS		= init
+# TODO: glob mkfs mknod clri
 
 all:		$(PROGS)
 
