--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -19,20 +19,22 @@ SRCS		= crt0.S cerror.S exit.S fork.S read.S write.S \
 		  execv.S execl.S chdir.S time.S mknod.S chmod.S sbrk.S \
 		  stat.S seek.S getpid.S getuid.S stime.S fstat.S \
 		  stty.S gtty.S sync.S dup.S signal.S \
-		  vprintf.c printf.c atoi.c ctime.c \
+		  vprintf.c printf.c atoi.c ctime.c malloc.c \
 		  strcat.c strchr.c strcmp.c strcpy.c strlen.c \
 		  strncat.c strncmp.c strncpy.c strrchr.c \
-		  memccpy.c memchr.c memcmp.c memcpy.c memset.c qsort.c
+		  memccpy.c memchr.c memcmp.c memcpy.c memset.c qsort.c \
+		  opendir.c closedir.c readdir.c
 
 OBJS		= cerror.o exit.o fork.o read.o write.o \
 		  open.o creat.o close.o wait.o link.o unlink.o \
 		  execv.o execl.o chdir.o time.o mknod.o chmod.o sbrk.o \
 		  stat.o seek.o getpid.o getuid.o stime.o fstat.o \
 		  stty.o gtty.o sync.o dup.o signal.o \
-		  vprintf.o printf.o atoi.o ctime.o \
+		  vprintf.o printf.o atoi.o ctime.o malloc.o \
 		  strcat.o strchr.o strcmp.o strcpy.o strlen.o \
 		  strncat.o strncmp.o strncpy.o strrchr.o \
-		  memccpy.o memchr.o memcmp.o memcpy.o memset.o qsort.o
+		  memccpy.o memchr.o memcmp.o memcpy.o memset.o qsort.o \
+		  opendir.o closedir.o readdir.o
 
 all:		crt0.o libc.a
 
@@ -95,14 +97,18 @@ unlink.o: unlink.S syscall.h
 wait.o: wait.S syscall.h
 write.o: write.S syscall.h
 atoi.o: atoi.c stdlib.h ansidecl.h
+closedir.o: closedir.c dirent.h ansidecl.h
 ctime.o: ctime.c time.h ansidecl.h string.h
+malloc.o: malloc.c stdlib.h ansidecl.h unistd.h
 memccpy.o: memccpy.c string.h ansidecl.h
 memchr.o: memchr.c string.h ansidecl.h
 memcmp.o: memcmp.c string.h ansidecl.h
 memcpy.o: memcpy.c string.h ansidecl.h
 memset.o: memset.c string.h ansidecl.h
+opendir.o: opendir.c dirent.h ansidecl.h
 printf.o: printf.c stdlib.h ansidecl.h stdarg.h
 qsort.o: qsort.c stdlib.h ansidecl.h
+readdir.o: readdir.c dirent.h ansidecl.h
 strcat.o: strcat.c string.h ansidecl.h
 strchr.o: strchr.c string.h ansidecl.h
 strcmp.o: strcmp.c string.h ansidecl.h
