Done cp and date. Sh: command "chdir" renamed to "cd", removed commands "login" and "newgrp". Libc: added fcntl.h, sys/types.h, sys/stat.h. Optimizer dumped core on date.c - fixed.

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -17,8 +17,9 @@ CC		= pdp11-pcc
 # Ritchie's compiler.
 #CC		= pdp11-cc
 
-PROGS		= hello echo cal sync ls sh
-# TODO: check cp date ed mkdir mv od rm rmdir stty
+PROGS		= hello echo cal ls sh cp date
+# TODO: mkdir mv od rm rmdir stty check ed
+# sync
 
 all:		$(PROGS)
 
