Ported od, ed, cat. Ed has some bugs yet. Libc: added mkstemp(). As: symbol table increased to compile ed.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 ETC		= etc/init
 BIN		= bin/sh bin/ls bin/echo bin/cal bin/cp bin/date bin/mkdir \
-		  bin/sync bin/mv bin/rmdir bin/stty
+		  bin/sync bin/mv bin/rmdir bin/stty bin/od bin/ed bin/cat
 DEV		= dev/tty8!c0:0 dev/fd0!b0:0 dev/fd1!b0:1
 DSK		= root.dsk usr.dsk
 FSUTIL		= ../fsutil/lsx-util
