--- a/src/etc/Makefile
+++ b/src/etc/Makefile
@@ -18,8 +18,8 @@ SIZE		= pdp11-size -o
 CFLAGS		= -O -I../libc
 LDFLAGS		= -a$(TOPSYS)
 
-PROGS		= init
-# TODO: glob mknod mkfs fsck
+PROGS		= init glob mknod mkfs
+# TODO: fsck
 
 all:		$(PROGS)
 
@@ -30,8 +30,15 @@ clean:
 		$(CC) $(LDFLAGS) -o $@ $^
 		pdp11-disasm -a$(TOPSYS) $@ > $@.dis
 
+mkfs:		mkfs.o ../libfs/libfs.a
+		$(CC) $(LDFLAGS) -v -o $@ $^ ../libfs/libfs.a
+		pdp11-disasm -a$(TOPSYS) $@ > $@.dis
+
+../libfs/libfs.a:
+		$(MAKE) -C ../libfs
 .c.s:
 		$(CC) $(CFLAGS) -S $<
+
 depend:
 		@cp Makefile Makefile~~
 		(sed '/^### DO NOT DELETE THIS LINE/,$$d' Makefile;\
@@ -44,12 +51,13 @@ depend:
 		mv Makefile~ Makefile
 
 ### DO NOT DELETE THIS LINE
-clri.o: clri.c
-glob.o: glob.c
-init.o: init.c
+check.o: check.c
+clri.o: clri.c ../libc/sys/types.h
+glob.o: glob.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/dirent.h
+init.o: init.c ../libc/unistd.h ../libc/ansidecl.h
 kdmp.o: kdmp.c
-mkfs.o: mkfs.c
-mknod.o: mknod.c
+mkfs.o: mkfs.c ../libc/stdio.h ../libc/ansidecl.h ../libc/stdlib.h ../libc/string.h ../libc/time.h ../libc/unistd.h ../libc/fcntl.h ../libc/sys/fs.h ../libc/sys/stat.h
+mknod.o: mknod.c ../libc/stdlib.h ../libc/ansidecl.h ../libc/unistd.h ../libc/sys/stat.h
 mkpt.o: mkpt.c
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
