--- a/src/libc/Makefile
+++ b/src/libc/Makefile
@@ -24,7 +24,8 @@ SRCS		= crt0.S nullsys.S nosys.S \
 		  strcat.c strchr.c strcmp.c strcpy.c strlen.c \
 		  strncat.c strncmp.c strncpy.c strrchr.c \
 		  memccpy.c memchr.c memcmp.c memcpy.c memset.c qsort.c \
-		  opendir.c closedir.c readdir.c isatty.c mkstemp.c
+		  opendir.c closedir.c readdir.c isatty.c mkstemp.c \
+		  readmtab.c
 
 OBJS		= nullsys.o nosys.o cerror.o exit.o fork.o read.o write.o \
 		  open.o creat.o close.o wait.o link.o unlink.o \
@@ -35,7 +36,8 @@ OBJS		= nullsys.o nosys.o cerror.o exit.o fork.o read.o write.o \
 		  strcat.o strchr.o strcmp.o strcpy.o strlen.o \
 		  strncat.o strncmp.o strncpy.o strrchr.o \
 		  memccpy.o memchr.o memcmp.o memcpy.o memset.o qsort.o \
-		  opendir.o closedir.o readdir.o isatty.o mkstemp.o
+		  opendir.o closedir.o readdir.o isatty.o mkstemp.o \
+		  readmtab.o
 
 all:		crt0.o libc.a
 
