--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -18,8 +18,7 @@ CC		= pdp11-pcc
 #CC		= pdp11-cc
 
 PROGS		= sync echo cal ls sh cp date mkdir mv rm rmdir stty \
-		  od ed cat ln wc pwd df
-# TODO: umount mount df
+		  od ed cat ln wc pwd df mount umount
 
 all:		$(PROGS)
 		$(SIZE) $(PROGS)
